--- a/i3/.config/i3status/config
+++ b/i3/.config/i3status/config
@@ -8,10 +8,9 @@
 
 general {
         colors = true
-	color_good = "#a3be8c"
-	color_degraded = "#ebcb8b"
-	color_bad = "#bf616a"
-
+	color_good = "#99cc99"
+	color_degraded = "#ffcc66"
+	color_bad = "#f2777a"
         interval = 5
 }
 
