--- a/i3/.i3/config
+++ b/i3/.i3/config
@@ -131,10 +131,10 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+        bindsym h resize shrink width 10 px or 10 ppt
+        bindsym j resize grow height 10 px or 10 ppt
+        bindsym k resize shrink height 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -149,48 +149,49 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+# Base16-eighties
+set $base00 #2d2d2d
+set $base01 #393939
+set $base02 #515151
+set $base03 #747369
+set $base04 #a09f93
+set $base05 #d3d0c8
+set $base06 #e8e6df
+set $base07 #f2f0ec
+set $base08 #f2777a
+set $base09 #f99157
+set $base0A #ffcc66
+set $base0B #99cc99
+set $base0C #66cccc
+set $base0D #6699cc
+set $base0E #cc99cc
+set $base0F #d27b53
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+	status_command i3status
 	position top
 	font pango:Source Code Pro Semibold, FontAwesome 9
-colors {
-   separator $base03
-   background $base01
-   statusline $base05
-   focused_workspace $base0C $base0D $base00
-   active_workspace $base02 $base02 $base07
-   inactive_workspace $base01 $base01 $base03
-   urgent_workspace $base08 $base08 $base07
+	colors {
+		separator $base03
+		background $base01
+		statusline $base05
+		focused_workspace $base0C $base0D $base00
+		active_workspace $base02 $base02 $base07
+		inactive_workspace $base01 $base01 $base03
+		urgent_workspace $base08 $base08 $base07
 }
 }
 
 
 # class                 border  backgr. text    indicator
 
-set $base00 #2b303b
-set $base01 #343d46
-set $base02 #4f5b66
-set $base03 #65737e
-set $base04 #a7adba
-set $base05 #c0c5ce
-set $base06 #dfe1e8
-set $base07 #eff1f5
-set $base08 #bf616a
-set $base09 #d08770
-set $base0A #ebcb8b
-set $base0B #a3be8c
-set $base0C #96b5b4
-set $base0D #8fa1b3
-set $base0E #b48ead
-set $base0F #ab7967
 
 client.focused $base0D $base0D $base00 $base01
 client.focused_inactive $base02 $base02 $base03 $base01
 client.unfocused $base01 $base01 $base03 $base01
 client.urgent $base02 $base08 $base07 $base08
-
 
 
 exec compton --backend glx --vsync opengl-swc
