enable display-sync

--- a/mpv-desktop/.config/mpv/mpv.conf
+++ b/mpv-desktop/.config/mpv/mpv.conf
@@ -3,6 +3,7 @@ ao=pulse
 af=format=channels=2
 hwdec=no
 save-position-on-quit
+video-sync=display-resample
 #framedrop=vo
 #minimum-scale=8 # Skip upscaling on anything above height 2000
 #video-sync=display
